--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <span class="home__greeting">Hello,My name is</span>
                         <h1 class="home__name">Nobitaa.exe</h1>
                         <span class="home__profession">Web Developer</span>
-                        <a download="" href="assets/pdf/Clay-Doe-Cv.pdf" class="button button-light">Download PDF</a>
+                        <a download="" href="assets/pdf/demo.txt" class="button button-light">Download PDF</a>
                     </div>
 
                     <div class="home__social">
